[gd_scene load_steps=8 format=2]

[ext_resource path="res://common/collisions/hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://common/collisions/hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/enemies/enemy.gd" type="Script" id=3]
[ext_resource path="res://entities/enemies/hit.wav" type="AudioStream" id=4]
[ext_resource path="res://common/state_machine/state_machine.gd" type="Script" id=5]
[ext_resource path="res://common/collisions/alert_signal.tscn" type="PackedScene" id=6]

[sub_resource type="AnimationRootNode" id=1]

[node name="Enemy" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 3 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Ai" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]

[node name="Modifiers" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 4
collision_mask = 10

[node name="Hitbox" parent="." instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 2

[node name="Alertsignal" parent="." instance=ExtResource( 6 )]

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="StateLabel" type="Label" parent="."]
margin_left = 1.0
margin_right = 41.0
margin_bottom = 7.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PatrolCooldown" type="Timer" parent="."]

[node name="Whiskers" type="Node2D" parent="."]

[node name="PlayerDetector" type="Node2D" parent="."]

[node name="PlayerDetector" type="RayCast2D" parent="PlayerDetector"]
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 2

[node name="PlayerDetector2" type="RayCast2D" parent="PlayerDetector"]
rotation = 0.785398
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 2

[node name="PlayerDetector3" type="RayCast2D" parent="PlayerDetector"]
rotation = 1.5708
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 2

[node name="PlayerDetector4" type="RayCast2D" parent="PlayerDetector"]
rotation = 2.35619
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 2

[node name="PlayerDetector5" type="RayCast2D" parent="PlayerDetector"]
rotation = 3.14159
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 2

[node name="PlayerDetector6" type="RayCast2D" parent="PlayerDetector"]
rotation = 3.92699
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 2

[node name="PlayerDetector7" type="RayCast2D" parent="PlayerDetector"]
rotation = 4.71239
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 2

[node name="PlayerDetector8" type="RayCast2D" parent="PlayerDetector"]
rotation = 5.49779
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 2

[node name="WallDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 10, 0 )

[node name="RangeDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 100, 0 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
